# vcfkit

./: .gitignore  ALPHA_USERS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  PERF_AUDIT.md  README.md  SECURITY.md  TESTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly-real-tests.yml
benches/e2e/: run.sh
benches/micro/: filter_bench.rs  liftover_bench.rs  normalize_bench.rs
crates/vcfkit-cli/: Cargo.toml
crates/vcfkit-cli/src/: ask.rs  english.rs  main.rs  output.rs  telemetry.rs
crates/vcfkit-cli/src/commands/: filter.rs  liftover.rs  mod.rs  normalize.rs
crates/vcfkit-cli/tests/: ask_gate.rs  filter_test.rs  liftover_test.rs  normalize_test.rs  real_world_differential.rs
crates/vcfkit-cli/tests/common/: diff.rs  download.rs  mod.rs
crates/vcfkit-core/: Cargo.toml
crates/vcfkit-core/src/: error.rs  filter.rs  io.rs  lib.rs  liftover.rs  normalize.rs  wasm.rs
crates/vcfkit-core/tests/: wasm_parity.rs
docs/: known_differences.md
drafts/: phase3-dogfood-log.md
tests/: english_filter_corpus.yaml  reference_versions.md
tests/corpus/synthetic/: README.md  basic.vcf  chr_prefix.vcf  empty_alt.vcf  hg19_coords.vcf  indels_unnormalized.vcf  large_indel.vcf  mini_ref.fa  mini_ref.fa.fai  mini_ref_polyA.fa  mini_ref_polyA.fa.fai  missing_fields.vcf  mixed_filters.vcf  multi_allelic.vcf  multi_allelic_indels.vcf  multiallelic_polyA.vcf  multiline_info.vcf  ref_mismatch.vcf
tests/wasm_runtime/: package.json  run.mjs
tests/wasm_runtime/expected/: filter_af_lt_0.25.vcf  filter_chr1.vcf  filter_gene_regex.vcf  filter_negation.vcf  filter_or.vcf  filter_pass_only.vcf  filter_pos_range.vcf  filter_qual_gt_50.vcf  normalize_number_g_split.vcf  normalize_snv_passthrough.vcf  normalize_split.vcf
tests/wasm_runtime/fixtures/: filter_anno.vcf  filter_pass_mixed.vcf  normalize_number_g.vcf  normalize_snv_only.vcf
web/: DESIGN_NOTES.md  astro.config.mjs  package-lock.json  package.json  proof-of-concept.html  tsconfig.json
web/public/: llms-full.txt  llms.txt
web/public/wasm/: .gitignore  package.json  vcfkit_core.d.ts  vcfkit_core.js  vcfkit_core_bg.wasm  vcfkit_core_bg.wasm.d.ts
web/src/components/: BenchmarkTable.astro  CliEquivalent.tsx  Demo.tsx  ExamplePicker.tsx  Hero.astro  LandingAsk.astro  LandingContact.astro  LandingCredits.astro  LandingOperations.astro  LandingTrust.astro  ResultPanel.tsx  SiteFooter.astro  SiteTitle.astro  SocialIcons.astro  VcfEditor.tsx
web/src/content/docs/: benchmarks.mdx  credits.mdx  index.mdx  install.mdx  introduction.mdx  known-differences.mdx  privacy.mdx
web/src/content/docs/commands/: filter.mdx  liftover.mdx  normalize.mdx
web/src/lib/: format-utils.ts  vcf-examples.ts  wasm-loader.ts
web/src/pages/: index.astro
web/src/styles/: custom.css
