[package]
name = "vcfkit-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Fast VCF toolkit: normalize, liftover, filter — single static binary, no htslib"
readme = "../../README.md"

[[bin]]
name = "vcfkit"
path = "src/main.rs"

[dependencies]
vcfkit-core = { version = "0.1.5", path = "../vcfkit-core" }
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
owo-colors = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
