[package]
name = "vcfkit-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Fast VCF toolkit (normalize, liftover, filter) — validated against bcftools, built on noodles"
readme = "../../README.md"

[[bin]]
name = "vcfkit"
path = "src/main.rs"

[[bin]]
name = "english_eval"
path = "src/bin/english_eval.rs"

[dependencies]
vcfkit-core = { version = "0.3.0-alpha.1", path = "../vcfkit-core" }
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
owo-colors = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = "3"
